fix info top margin on mobile sizes

--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,10 @@ button img {
         top: -0.75em;
     }
 
+    .info {
+        margin-top: 0.625em;
+    }
+
     h2 {
         font-size: 1em;
     }
@@ -140,11 +144,9 @@ button img {
         text-align: center;
     }
 
-    /* Left off here, continue styles below*/
-
     .buttons_container {
-        margin: 50px;
-        gap: 20px;
+        margin: 3.12em;
+        gap: 1.25em;
     }
 
     button {
@@ -177,3 +179,5 @@ button img {
         justify-content: center;
     }
 }
+
+/* Tablet */
